# Employee-Sick

./: README.md  pyproject.toml
src/: cli.py
src/api/: main.py
src/api/schemas/: emlopyees.py
